# bootcamp_ds

./: .gitattributes  README.md  pyproject.toml
airflow/dags/: etl_department_salary_left_att.py  etl_employees_dataset.py  etl_mean_work_last_3_months_att.py  etl_number_projects_att.py  etl_satisfaction_evaluation_att.py  etl_time_in_company_att.py  etl_work_accident_att.py
app/: app.py  model.pkl
datalake/.minio.sys/buckets/: .usage.json
datalake/.minio.sys/buckets/.minio.sys/buckets/.bloomcycle.bin/: fs.json
datalake/.minio.sys/buckets/.minio.sys/buckets/.usage-cache.bin/: fs.json
datalake/.minio.sys/buckets/.minio.sys/buckets/.usage.json/: fs.json
datalake/.minio.sys/buckets/.minio.sys/buckets/curated/.usage-cache.bin/: fs.json
datalake/.minio.sys/buckets/.minio.sys/buckets/landing/.usage-cache.bin/: fs.json
datalake/.minio.sys/buckets/.minio.sys/buckets/processing/.usage-cache.bin/: fs.json
datalake/.minio.sys/buckets/curated/cluster.joblib/: fs.json
datalake/.minio.sys/buckets/curated/dataset.csv/: fs.json
datalake/.minio.sys/buckets/curated/model.pkl/: fs.json
datalake/.minio.sys/buckets/processing/employees_dataset.parquet/: fs.json
datalake/curated/: cluster.joblib
datalake/processing/: employees_dataset.parquet
notebooks/: SWEETVIZ_REPORT.html  analise.ipynb  machine_learning_deploy.ipynb  modelagem_dados.ipynb
